# nuxt-tauri

./: .env.browser  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bunfig.toml  eslint.config.mjs  nuxt.config.ts  package.json  tsconfig.json
.claude/: settings.json
.claude/agents/: i18n-checker.md
.claude/skills/new-brand/: SKILL.md
.claude/skills/new-component/: SKILL.md
.claude/skills/new-page/: SKILL.md
app/: app.config.ts  app.vue  router.options.ts
app/assets/css/: main.css
app/components/Design/: BottomBlob.vue  TopBlob.vue
app/components/Layout/: Tile.vue
app/components/Site/: Navbar.vue
app/components/WeCare/: AccountMenuItem.vue  BannerCarousel.vue  BottomNav.vue  CTACard.vue  CategoryTabs.vue  EmptyCartIllustration.vue  Header.vue  ProductCard.vue  ProductSection.vue  SearchBar.vue  TrendingSection.vue
app/composables/: navigation.ts  pages.ts  tauri.ts
app/layouts/: blank.vue  default.vue  home.vue  mobile.vue
app/modules/: tauri.ts
app/pages/: [...all].vue  account.vue  cart.vue  index.vue  os.vue  store.vue
app/types/: wecare.ts
apps/pharmaplus/: nuxt.config.ts  package.json  tsconfig.json
apps/pharmaplus/app/: app.config.ts
apps/pharmaplus/app/assets/css/: brand.css
apps/pharmaplus/app/pages/: index.vue  splashscreen.vue
apps/pharmaplus/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/pharmaplus/src-tauri/src/: main.rs
apps/wecare/: app.config.ts  nuxt.config.ts  package.json  tsconfig.json
apps/wecare/app/: app.config.ts
apps/wecare/app/assets/css/: brand.css  main.css
apps/wecare/app/components/: WeCareAccountMenuItem.vue  WeCareCTACard.vue  WeCareHeader.vue  WeCareProductCard.vue
apps/wecare/app/layouts/: default.vue  mobile.vue
apps/wecare/app/pages/: [...all].vue  account.vue  cart.vue  favorites.vue  index.vue  shop.vue  splashscreen.vue
apps/wecare/app/pages/product/: [id].vue
apps/wecare/app/types/: wecare.ts
apps/wecare/i18n/locales/: el.json  en.json
apps/wecare/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/wecare/src-tauri/capabilities/: main.json
apps/wecare/src-tauri/icons/: icon.icns
apps/wecare/src-tauri/src/: lib.rs  main.rs
scripts/: app.ts  new-brand.ts  prepare.ts  tsconfig.json  tsconfig.tsbuildinfo  typecheck.ts
scripts/__tests__/: app.test.ts  new-brand.test.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
types/: global.d.ts
