[workspace]
members = [
  "packages/tauri-core",
  "apps/wecare/src-tauri",
  "apps/pharmaplus/src-tauri",
]
resolver = "2"

[workspace.dependencies]
tauri = { version = "2.10.2", features = [
  "tray-icon",
  "unstable"
] }
tauri-build = { version = "2.5.5" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1.49.0", features = [ "time" ] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-http = "2.5.7"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-biometric = "2.3.2"
tauri-plugin-barcode-scanner = "2.4.4"
tauri-plugin-geolocation = "2.3.2"
tauri-plugin-mcp-bridge = "0.9.0"
