[package]
name = "pharmaplus-app"
version = "1.0.0"
edition = "2021"

[lib]
name = "pharmaplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri-core = { path = "../../../packages/tauri-core" }
tauri = { workspace = true }

# Plugin crates must be direct dependencies for Tauri's capability resolver
tauri-plugin-shell = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-biometric = { workspace = true }
tauri-plugin-barcode-scanner = { workspace = true }
tauri-plugin-geolocation = { workspace = true }
tauri-plugin-mcp-bridge = { workspace = true }
