[package]
name = "wecare-app"
version = "1.5.0"
description = "WeCare Pharmacy - Tauri app"
authors = ["VasilisTotskas"]
license = "MIT"
edition = "2021"

[lib]
name = "wecare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri-core = { path = "../../../packages/tauri-core" }
tauri = { workspace = true }

# Plugin crates must be direct dependencies for Tauri's capability resolver
tauri-plugin-shell = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-mcp-bridge = { workspace = true }
